# daring-daffodils

./: .gitignore  LICENSE  Makefile  README.md  app.py  generate_cert.py  pyproject.toml  setup.ps1  start_complete_setup.bat  start_mobile_server.bat  start_mobile_server.py  start_websocket_server.bat  websocket_server.py
browser_extension/: background.js  background_broken.js  background_fixed.js  background_new.js  background_old.js  content.js  firebase_app.js  main.py  manifest.json  popup.html  popup.js  websocket_app.js  websocket_app_new.js  websocket_app_old.js
mobile_page/: index.html  main.py  mobile_page.py
mobile_page/py-scripts/: mobile_page.py
