[project]
# This section contains metadata about your project.
# Don't forget to change the name, description, and authors to match your project!
name = "daring-daffodils"
description = "Our Code Jam 12 Project"
authors = [
    { name = "Your Name" }
]
version = "0.1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = { extras = ["standard"], version = "^0.116.1" }
qrcode = "^8.2"

[dependency-groups]
# This `dev` group contains all the development requirements for our linting toolchain.
# Don't forget to pin your dependencies!
# This list will have to be migrated if you wish to use another dependency manager.
dev = [
    "pre-commit~=4.2.0",
    "ruff~=0.12.2",
]

[tool.ruff]
exclude = ["browser_extension/runtime"]
# Increase the line length. This breaks PEP8 but it is way easier to work with.
# The original reason for this limit was a standard vim terminal is only 79 characters,
# but this doesn't really apply anymore.
line-length = 119
# Target Python 3.12. If you decide to use a different version of Python
# you will need to update this value.
target-version = "py312"
# Automatically fix auto-fixable issues.
fix = true

[tool.ruff.lint]
select = [
    "E", # all syntax and formatting errors
    "F", # Pyflakes checks (undefined names, unused imports)
    "W", # Warnings like unused variables, redefined names

]
# Ignore some of the most obnoxious linting errors.
ignore = [
    # Docstring whitespace.
    "D203",
    "D213",
    # Docstring punctuation.
    "D415",
    # Docstring quotes.
    "D301",
    # Builtins.
    "A",
    # Print statements.
    "T20",
    # TODOs.
    "TD002",
    "TD003",
    "FIX",
]
